# gaussian_SPLAT

./: .gitignore
common/: common_class.hpp  common_define.hpp  common_header.hpp
knn_gaussian/: common_header.hpp
knn_gaussian/construct_tree/: construct.hpp
knn_gaussian/knn_gaussian_GPU/: CMakeLists.txt  a.out  def_functions.cuh  main.cu  qq.ncu-rep  test.cu  test_knn_gpu.cu  test_knn_gpu_copy.cu
knn_gaussian/knn_gaussian_cpu/: CMakeLists.txt  a.out  def_functions.hpp  knn.cpp  main.cpp  test.cpp  test_knn_cpu.cpp  visualize.py
my_viewer/: CMakeLists.txt  class.cuh  main.cu  qq.ncu-rep  test.py  test2.py  test_aprox.py  test_render.cu
my_viewer/rendering/: ray_gestion.cuh  rendering_functions.cuh
my_viewer/rendering/pre_filtering/: block_gestion.cuh  gaussian_filtering.cuh
my_viewer/rendering/rendering/: rendering_pixel.cuh  rendering_screen.cuh  rendering_screen_prefiltered.cuh
